sfdc_enterprise_42demo - SANDBOX/src/objects/CAA_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck to ignore this CAA configuration</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dedupe_Field_Name__c</fullName>
        <inlineHelpText>The API name of the field (in target object) used to prevent duplicates. This field must be unique in the target object! Also, the type of the field has to be Text, Lookup or Email. No de-duplication if left empty.</inlineHelpText>
        <label>Dedupe Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <inlineHelpText>Which event(s) should trigger the copy? Make sure to fill this one in, or nothing will happen</inlineHelpText>
        <label>Events</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undelete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Formula_Field_Name__c</fullName>
        <inlineHelpText>[Optional] The API name of the Formula field on the source object that will be evaluated in the triggered records. This Formula Field must be of type text and return &quot;1&quot;, in order for the record to be copied. 

E.g. IF(CONTAINS(Name , &apos;YES&apos;), &apos;1&apos;,&apos;0&apos;)</inlineHelpText>
        <label>Formula Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <inlineHelpText>Use the API name of the object you&apos;re copying from</inlineHelpText>
        <label>Source Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <inlineHelpText>Use API name of the object you&apos;re copying to</inlineHelpText>
        <label>Target Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Target_Normal__c</fullName>
        <description>Do not remove! Used in unit tests</description>
        <label>Test Target Normal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Target_Unique__c</fullName>
        <description>Do not remove! Used in unit test</description>
        <label>Test Target Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CAA Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source_Object__c</columns>
        <columns>Target_Object__c</columns>
        <columns>Active__c</columns>
        <columns>Dedupe_Field_Name__c</columns>
        <columns>Events__c</columns>
        <columns>Formula_Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAAC-{00000}</displayFormat>
        <label>Copy Anything Anywhere Configuration Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAA Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>